--- a/2018-06-14-LTC.Rmd
+++ b/2018-06-14-LTC.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "2018-06-14 LTC"
+title: "The Carpentries community"
+subtitle : "teaching researchers foundational computational and data science skills"
 output: ioslides_presentation
 ---
 
